# scorep_plugin_libsensors

./: CHANGELOG  CMakeLists.txt  README.md  flake.nix  print_sensors.c  sensors_plugin.c
test/: .gitignore  Makefile  README.md  record_trace.sh  sleep5.c
